# Material-Designer

./: .gitignore  .gitmodules  .travis.yml  Build.bat  CMakeLists.txt  README.md  appveyor.yml
Assets/Fonts/: arial14.font  arial15.font  arial16.font
CMake/: Findimgui.cmake  Findimgui_node_editor.cmake
Lib/imgui/: CMakeLists.txt
Source/: App.cpp  App.h  CMakeLists.txt  DeviceResources.cpp  MaterialDesigner.cpp
Source/App/: App.cpp  App.hpp  Core.hpp  DeviceResources.cpp  DeviceResources.hpp  MaterialDesigner.cpp
Source/Core/: Except.hpp
Source/Services/: AssetManager.cpp  AssetManager.hpp  Log.cpp  Log.hpp  TextureManager.cpp  TextureManager.hpp
Source/UI/: CompoundWidget.cpp  CompoundWidget.hpp  DraggableWidget.cpp  DraggableWidget.hpp  ImGuiWin32.cpp  Node.cpp  Node.hpp  NodeConnectionWidget.cpp  NodeConnectionWidget.hpp  NodeWidget.cpp  NodeWidget.hpp  TextWidget.cpp  TextWidget.hpp  UI.cpp  UI.hpp  Widget.cpp  Widget.hpp  WidgetFactory.cpp  WidgetFactory.hpp
Tests/: CMakeLists.txt  LogTests.cpp
